完成外部化插件加载功能